--- a/dev/index.html
+++ b/dev/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<title>Gulp+webpack</title>
-	<link rel="stylesheet" href="css/index.css">
-	<script src="http://192.168.1.102:3333/reload.js"></script>
-	<script>
-		;(function(){
-			var wd = window.innerWidth;
-			wd = wd > 540 ? 540:wd;
-			document.querySelector("html").style.fontSize = wd / 10 +"px";
-		})()
-	</script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>Gulp+webpack</title>
+    <link rel="stylesheet" href="css/index.css?rev=@@hash">
 </head>
 <body>
-	<app></app>
-	<script src="js/index.js?rev=@@hash"></script>
+    <app></app>
+    <script src="js/index.js?rev=@@hash"></script>
 </body>
 </html>
