--- a/dev/index.html
+++ b/dev/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Gulp+webpack</title>
-    <link rel="stylesheet" href="css/index.css?rev=@@hash">
+    <link rel="stylesheet" href="./css/index.css?rev=@@hash">
 </head>
 <body>
     <app></app>
-    <script src="js/index.js?rev=@@hash"></script>
+    <script src="./js/index.js?rev=@@hash"></script>
 </body>
 </html>
